# svgvi

./: .gitlab-ci.yml  meson.build  mx.pwmc.Svgvi.json
data/: meson.build  mx.pwmc.Svgvi.appdata.xml.in  mx.pwmc.Svgvi.desktop.in  mx.pwmc.Svgvi.gschema.xml
po/: POTFILES  meson.build
screenshots/: index.html
src/: app.vala  editor.vala  main.vala  meson.build  source-view.vala  svg-view.vala  svgvi.gresource.xml  window.ui  window.vala
